Removed new styling top textbox

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				What if you had a friend that could help you set up a webstore, a Facebook page and bring potential customers to your site?<br><br>
 				AnyWebstore is that friend.
 				<br><br>
-				<button class="button large_button orange_button">How does it work?</button>
+				<button class="button large_button green_button">Get your store</button>
 				</div>
 			</div>
 		</div>
@@ -51,6 +51,7 @@
 			<div id="top_textbox">
 			 	<h1><span class="blue_text">
 			 		You don't have to know ecommerce or marketing.</span><br> <span class="grey_text">All you need is something to sell.</span></h1>
+			 		
 			</div>	
 		</section>
 
@@ -69,13 +70,12 @@
 			<!--- Template selection -->
 
 			<section class="section_full_width">
-				<h2>Just select a template</h2>
+				<h2>Click to view templates</h2>
 					<div class="template" id="template1">
 						<div class="black_opacity">
 							<div class="inner_box">
 								<div class="template_name">Modern store</div>
 									<button class="button medium_button blue_button">View</button>
-									<button class="button medium_button green_button">Select</button>
 							</div>
 						</div>
 					</div>
