Changed size of section divider + added numbers to three step model

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 
 		<section class="section_full_width">
 			<div class="div_top_image" id="select_your_template">
-				<div class="div_top_image_textbox">Select a template</div>
+				<div class="div_top_image_textbox">1. Select a template</div>
 			</div>
 			<div class="div_top_image" id="tell_us_about_business">
-				<div class="div_top_image_textbox">Tell us about your business</div>
+				<div class="div_top_image_textbox">2. Tell us about your business</div>
 			</div>
 			<div class="div_top_image" id="customers">
-				<div class="div_top_image_textbox">We get you off the ground</div>
+				<div class="div_top_image_textbox">3. We get you off the ground</div>
 			</div>
 		</section>
 
