Playing around with design + adjusted icons description text

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 					is a product.
 				</div>
 				<div id="header_textbox_subtext">
-				What if you had a friend that could help you set up a webstore, a Facebook page and bring potential customers to your site?<br><br>
-				AnyWebstore is that friend.
+				What if you could just click a button and somebody else would set up a webstore, a Facebook page and bring potential customers to your site?<br><br>
+				Guess what... AnyWebstore does that for you.
 				<br><br>
 				<button class="button large_button green_button">Get your store</button>
 				</div>
@@ -90,7 +90,7 @@
 			<section class="section_divider"
 					 id="we_do_everything_divider">
 				<div class="black_opacity2">
-					<div id="no_opacity_layer">
+					<div class="section_divider_textbox">
 						<h2>
 							We build the site<br>
 							We drive the traffic<br>
@@ -105,7 +105,7 @@
 
 			<!--- Icon boxes -->
 
-			<section class="section">
+			<section class="section" style="max-width: 1200px;">
 
 				<div class="icon_box">
 					<img class="icons" src="icons/png/design.png"><br>
@@ -115,7 +115,7 @@
 				<div class="icon_box">
 					<img class="icons" src="icons/png/responsive.png"><br>
 					<h4>Mobile and tablet optimized</h4>
-					<p>The store will be optimized for computer,<br> tablet and smartphone.</p>	
+					<p>The store will be fully responsive which means it is optimized for computer, tablet and smartphone.</p>	
 				</div>
 				<div class="icon_box">
 					<img class="icons" src="icons/png/payment.png"><br>
@@ -125,7 +125,7 @@
 				<div class="icon_box">
 					<img class="icons" src="icons/png/online6.png"><br>
 					<h4>Free web hosting</h4>
-					<p>You don't have to worry about the hosting.<br> We'll take care of it for you.</p>	
+					<p>You don't have to worry about the hosting. We'll take care of it for you.</p>	
 				</div>
 				<div class="icon_box">
 					<img class="icons" src="icons/png/like3.png"><br>
@@ -199,11 +199,13 @@
 			<section class="section_divider"
 					 id="pricing_divider">
 				<div class="black_opacity2">
-					<div id="no_opacity_layer" style="padding-top: 80px;">
-						<h2>
-							So how much is this gonna cost you?
+					<div class="section_divider_textbox">
+						<h2 style="line-height: 1.6em;">
+							We're ready to go.<br>
+							How about you?
 						</h2>
-						<button class="button large_button blue_button">View Pricing</button>
+						<button class="button large_button green_button">Get your store</button>
+						<button class="button large_button blue_button">View pricing</button>
 					</div>
 				</div>
 				
