Minor change to header description text

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</div>
 				<div id="header_textbox_subtext">
 				What if you could just click a button and somebody else would set up a webstore, a Facebook page and bring potential customers to your site?<br><br>
-				Guess what... AnyWebstore does that for you.
+				That's what AnyWebstore does.
 				<br><br>
 				<button class="button large_button green_button">Get your store</button>
 				</div>
