Final commit of the day

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<div class="div_top_image_textbox">2. Tell us about your business</div>
 			</div>
 			<div class="div_top_image" id="customers">
-				<div class="div_top_image_textbox">3. We get you off the ground</div>
+				<div class="div_top_image_textbox">3. Enjoy your webstore!</div>
 			</div>
 		</section>
 
