Final commit of the day

--- a/service.html
+++ b/service.html
@@ -72,6 +72,9 @@
 			</div>
 		</section>
 
+		<section class="section_full_width" style="margin-bottom: 30px;">
+			<h2>Select your store type</h2>
+		</section>
 		<section class="section_full_width">
 			<div class="table">
 		 	<div id="table_header">
