restructured the whole site with boxes and imgs

--- a/about.html
+++ b/about.html
@@ -41,40 +41,51 @@
 
 		<!--- Body START -->
 
-		<section class="section">
-			<h3>What is COMPANY NAME?</h3>
+		<section class="section_full_width">
+			<div class="div_about_us">
+				<div class="div_about_us_image"><div class="div_top_image_textbox">What is AnyWebstore?</div></div>
 
-			<p class="about_p">It’s the answer to all your prayers!<br><br>
-			Well, maybe not all of them...<br><br> But it is the perfect alternative for anyone who doesn’t know how to code and cannot afford a developer. COMPANY NAME offers a priceworthy alternative to the conventional way of setting up a website.<br><br>
-			By providing web stores for a fraction of the cost COMPANY NAME allows more entrepreneurs to sell their products.</p>
-
-
-			<h3>Who is COMPANY NAME for?</h3>
-
-			<p class="about_p">The answer is as simple as powerful.<br><br>
-			COMPANY NAME is for anyone who’s looking to sell anything.
-			All you need is a product of any kind and you can be making money quicker and with less effort than ever before.</p>
+			<div class="about_us_box">
+			<p>AnyWebstore is the perfect alternative for anyone who doesn’t know how to code and cannot afford a developer. We offer a priceworthy alternative to the conventional way of setting up a website.<br><br>
+			By providing web stores for a fraction of the cost, AnyWebstore allows more entrepreneurs to sell their products.</p>
+			</div>
+		</div>
 
 
-			<h3>What is so unique about COMPANY NAME’s offer?</h3>
+			<div class="div_about_us">
+				<div class="div_about_us_image"><div class="div_top_image_textbox">Who is AnyWebstore for?</div></div>
 
-			<p class="about_p">The fact that you pretty much have to do nothing.
-			We will set up your site, handle your hosting and install a payment solution for you. But who’s gonna buy your products?
-			Don’t worry, we’ll handle that as well.
-			COMPANY NAME will set up a compelling Facebook ad that will drive potential customers to your site.<br><br>
+			<div class="about_us_box"><p>The answer is as simple as powerful.<br><br>
+			AnyWebstore is for anyone who’s looking to sell anything.
+			All you need is a product of any kind and you can be making money quicker and with less effort than ever before.</p></div>
+			</div>
+
+
+			<div class="div_about_us">
+				<div class="div_about_us_image"><div class="div_top_image_textbox">What is unique about AnyWebstore?</div></div>
+
+			<div class="about_us_box"><p>The fact that you pretty much have to do nothing.
+			We will set up your site, handle your hosting and install a payment solution for you. <br><br>
+			If you want to, we'll even set up a compelling Facebook ad that will drive potential customers to your site.<br><br>
 
 			All you gotta to do is kick back and relax.</p>
+			</div>
+			</div>
 
 
-			<h3>When and where was COMPANY NAME founded?</h3>
+			<div class="div_about_us">
+				<div class="div_about_us_image"><div class="div_top_image_textbox">When and where was it founded?</div></div>
 
-			<p class="about_p">COMPANY NAME launched the site during the fall/winter of 2015.
-			The company is staged in Stockholm, Sweden but have customers from all over the world.<br><br>
+			<div class="about_us_box"><p>AnyWebstore launched the site during the fall/winter of 2015.
+			The company is situated in Stockholm, Sweden but have customers from all over the world.<br><br>
 
-			If you wanna get in touch with us, don’t hesitate to hit us up!</p>
+			If you wanna get in touch with us, don’t hesitate to hit us up!<br><br>
+			<button class="button medium_button orange_button">Contact us</button></p>
+			</div>
+			</div>
 		</section>
 		<section class="section">
-			<button class="button large_button orange_button">How does it work?</button>
+			
 		</section>
 
 
