Changed text in header

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="header">
 			<div id="header_textbox">
 				<div id="header_textbox_text"> 
-					Det enda du behöver,<br>
+					Allt som behövs,<br>
 					är en produkt.
 				</div>
 				<div id="header_textbox_subtext">
