"Det enda du behöver är något att sälja"

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		<div class="header">
 			<div id="header_textbox">
 				<div id="header_textbox_text"> 
-					Allt som behövs,<br>
-					är en produkt.
+					Det enda du behöver
+					är något att sälja.
 				</div>
 				<div id="header_textbox_subtext">
 				Tänk om man bara kunde klicka på en knapp så satte någon upp en webstore, en Facebooksida och skicka potentiella kunder till en.<br><br>
