Adjusting design and translating to swedish for landing page

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 				Tänk om man bara kunde klicka på en knapp så satte någon upp en webstore, en Facebooksida och skicka potentiella kunder till en.<br><br>
 				Det är precis vad AnyWebstore gör.
 				<br><br>
-				<button class="button large_button green_button">Öppna din webstore</button>
-				</div>
+				<a href="singup.html"><button class="button large_button green_button">Öppna din webstore</button>
+				</div></a>
 			</div>
 		</div>
 
@@ -44,33 +44,33 @@
 
 				<div class="icon_box">
 					<img class="icons" src="icons/png/design.png"><br>
-					<h4>Custom designed webstore</h4>
-					<p>We will set up and design a custom webstore with the color scheme of your choice.</p>	
+					<h4>Designad webstore</h4>
+					<p>Vi sätter upp en färdigdesignad webstore anpassad efter dina produkter</p>	
 				</div>
 				<div class="icon_box">
 					<img class="icons" src="icons/png/responsive.png"><br>
-					<h4>Mobile and tablet optimized</h4>
-					<p>The store will be fully responsive which means it is optimized for computer, tablet and smartphone.</p>	
+					<h4>Mobil och surfplatta</h4>
+					<p>Varje webstore är anpassad för dator, mobil och surfplatta.</p>	
 				</div>
 				<div class="icon_box">
 					<img class="icons" src="icons/png/payment.png"><br>
-					<h4>Managed payment solution</h4>
-					<p>We'll deliver the store with a fully functioning shopping cart and payment solution.</p>	
+					<h4>Hanterad betallösning</h4>
+					<p>Varje webstore levererars med fullt fungerande 'kundvagn' och betallösning.</p>	
 				</div>
 				<div class="icon_box">
 					<img class="icons" src="icons/png/online6.png"><br>
-					<h4>Free web hosting</h4>
-					<p>You don't have to worry about the hosting. We'll take care of it for you.</p>	
+					<h4>Gratis web hosting</h4>
+					<p>Du behöver inte oroa dig för hosting. Vi löser det åt dig utan extra kostnad.</p>	
 				</div>
 				<div class="icon_box">
 					<img class="icons" src="icons/png/like3.png"><br>
-					<h4>Custom Facebook page</h4>
-					<p>We will design a custom Facebook page<br> including cover photo and profile picture.</p>	
+					<h4>Egen Facebooksida</h4>
+					<p>Vi bygger och designar en unik Facebook sida inklusive cover photo och profilbild.</p>	
 				</div>
 				<div class="icon_box">
 					<img id="icon_geo" src="icons/png/geo.png"><br>
 					<h4>Laser focused marketing</h4>
-					<p>We will craft a compelling Facebook ad<br> to drive potential customers to your site.</p>	
+					<p>Vi skapar en attraktiv Facebook annons för att driva potentiella kunder till dig.</p>	
 				</div>
 
 			</section>
@@ -80,12 +80,12 @@
 				<div class="black_opacity2">
 					<div class="section_divider_textbox">
 						<h2>
-							We build the site<br>
-							We drive the traffic<br>
-							We handle the hosting<br><br>
-							We... do it all for you.
+							Vi fixar din site<br>
+							Vi driver din trafik<br>
+							Vi hanterar din hosting<br><br>
+							Och du betalar bara $10/mån.
 						</h2>
-						<button class="button large_button orange_button">How does it work?</button>
+						<button class="button large_button green_button">Öppna din webstore</button>
 					</div>
 				</div>
 				
