Minor tweak to link to signup page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				Tänk om man bara kunde klicka på en knapp så satte någon upp en webstore, en Facebooksida och skicka potentiella kunder till en.<br><br>
 				Det är precis vad AnyWebstore gör.
 				<br><br>
-				<a href="http://890622.github.io/singup.html"><button class="button large_button green_button">Öppna din webstore</button>
+				<a href="http://890622.github.io/signup.html"><button class="button large_button green_button">Öppna din webstore</button>
 				</div></a>
 			</div>
 		</div>
