Setting up button and adding swedish copy

--- a/signup.html
+++ b/signup.html
@@ -23,15 +23,21 @@
 		
 		<div class="header">
 			<div id="header_textbox">
-				<div id="header_textbox_text"> 
-					Det enda du behöver
-					är något att sälja.
+				<div id="header_textbox_text_signup"> 
+					Woho! Du är snart ägare till en av de första
+					 AnyWebstore butikerna!
 				</div>
-				<div id="header_textbox_subtext">
-				Tänk om man bara kunde klicka på en knapp så satte någon upp en webstore, en Facebooksida och skicka potentiella kunder till en.<br><br>
-				Det är precis vad AnyWebstore gör.
-				<br><br>
-				<a href=""><button class="button large_button green_button">Öppna din webstore</button>
+				<div id="header_textbox_subtext_signup">
+				 AnyWebstore är nyligen lanserat och du är en av de första kunderna i Sverige.<br><br> Vi ber dig därför att anmäla ditt intresse genom att klicka på knappen nedan. Ett mailformumlär öppnas där du ombeds att skicka ett mail med ditt intresse.<br><br> 
+				
+				<a href=""><button class="button large_button orange_button" id="signup_button">Skicka mail</button></a>
+
+				  <br><br>
+				  Vi kommer inom kort kontakta dig och sätta igång med din webstore.<br><br>
+
+				  Varmt välkommen!
+				</div>
+
 				</div>
 			</div>
 		</div>
