--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					är något att sälja.
 				</div>
 				<div id="header_textbox_subtext">
-				Tänk om man bara kunde klicka på en knapp så satte någon upp en webstore, en Facebooksida och skicka potentiella kunder till en.<br><br>
+				Tänk om man bara kunde klicka på en knapp så hade man en webstore, en Facebooksida och kunder som knackade på dörren.<br><br>
 				Det är precis vad AnyWebstore gör.
 				<br><br>
 				<a href="http://890622.github.io/signup.html
