Added first icon hosted

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<section class="section" style="max-width: 1200px;">
 
 				<div class="icon_box">
-					<img class="icons" src="icons/png/design.png"><br>
+					<img class="icons" src="http://s1.postimg.org/bshtakjgf/design.png"><br>
 					<h4>Designad webstore</h4>
 					<p>Vi sätter upp en färdigdesignad webstore anpassad efter dina produkter</p>	
 				</div>
