Setting up all icons + minor copy translation

--- a/index.html
+++ b/index.html
@@ -49,28 +49,28 @@
 					<p>Vi sätter upp en färdigdesignad webstore anpassad efter dina produkter</p>	
 				</div>
 				<div class="icon_box">
-					<img class="icons" src="icons/png/responsive.png"><br>
+					<img class="icons" src="http://s1.postimg.org/3yh7p6bnj/responsive.png"><br>
 					<h4>Mobil och surfplatta</h4>
 					<p>Varje webstore är anpassad för dator, mobil och surfplatta.</p>	
 				</div>
 				<div class="icon_box">
-					<img class="icons" src="icons/png/payment.png"><br>
+					<img class="icons" src="http://s1.postimg.org/m543wnczj/payment.png"><br>
 					<h4>Hanterad betallösning</h4>
 					<p>Varje webstore levererars med fullt fungerande 'kundvagn' och betallösning.</p>	
 				</div>
 				<div class="icon_box">
-					<img class="icons" src="icons/png/online6.png"><br>
+					<img class="icons" src="http://s1.postimg.org/4dshi6xkv/online6.png"><br>
 					<h4>Gratis web hosting</h4>
 					<p>Du behöver inte oroa dig för hosting. Vi löser det åt dig utan extra kostnad.</p>	
 				</div>
 				<div class="icon_box">
-					<img class="icons" src="icons/png/like3.png"><br>
+					<img class="icons" src="http://s1.postimg.org/h7qjbjb0f/like3.png"><br>
 					<h4>Egen Facebooksida</h4>
 					<p>Vi bygger och designar en unik Facebook sida inklusive cover photo och profilbild.</p>	
 				</div>
 				<div class="icon_box">
-					<img id="icon_geo" src="icons/png/geo.png"><br>
-					<h4>Laser focused marketing</h4>
+					<img id="icon_geo" src="http://s1.postimg.org/ymarjt85b/geo.png"><br>
+					<h4>Laser fokuserad marknadsföring</h4>
 					<p>Vi skapar en attraktiv Facebook annons för att driva potentiella kunder till dig.</p>	
 				</div>
 
