Changing button colors and uploading background image to header

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 				Tänk om man bara kunde klicka på en knapp så hade man en webstore, en Facebooksida och kunder som knackade på dörren.<br><br>
 				Det är precis vad AnyWebstore gör.
 				<br><br>
-				<a href="http://890622.github.io/signup.html
-				"><button class="button large_button green_button">Öppna din webstore</button>
+				<a href="http://890622.github.io/signup.html">
+				<button class="button large_button blue_button">Öppna din webstore</button>
 				</div></a>
 			</div>
 		</div>
@@ -86,7 +86,9 @@
 							Vi hanterar din hosting<br><br>
 							Och du betalar bara $10/mån.
 						</h2>
-						<button class="button large_button green_button">Öppna din webstore</button>
+						<a href="http://890622.github.io/signup.html">
+						<button class="button large_button blue_button">Öppna din webstore</button>
+					</a>
 					</div>
 				</div>
 				
