If I've missed anything

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		
 		<!--- Header -->
 		
-		<div class="header">
+		<div class="header" id="landing_page_header">
 			<div id="header_textbox">
 				<div id="header_textbox_text"> 
 					Det enda du behöver
