If I've missed anything

--- a/signup.html
+++ b/signup.html
@@ -21,26 +21,41 @@
 		
 		<!--- Header -->
 		
-		<div class="header">
+		<div class="header" id="signup_page_header" style="margin-bottom: 50px;">
 			<div id="header_textbox">
 				<div id="header_textbox_text_signup"> 
-					Woho! Du är snart ägare till en av de första
-					 AnyWebstore butikerna!
+					Woho! Du har snart en egen webstore!
 				</div>
-				<div id="header_textbox_subtext_signup">
-				 AnyWebstore är nyligen lanserat och du är en av de första kunderna i Sverige.<br><br> Vi ber dig därför att anmäla ditt intresse genom att klicka på knappen nedan. Ett mailformumlär öppnas där du ombeds att skicka ett mail med ditt intresse.<br><br> 
-				
-				<a href=""><button class="button large_button orange_button" id="signup_button">Skicka mail</button></a>
-
-				  <br><br>
-				  Vi kommer inom kort kontakta dig och sätta igång med din webstore.<br><br>
-
-				  Varmt välkommen!
-				</div>
-
 				</div>
 			</div>
 		</div>
+
+		<!--- Three Step Model -->
+		<section class="section_full_width">
+			<h1 style="color: #595959;">Varmt välkommen!</span></h1>
+			<div id="header_textbox_subtext_signup">
+				 AnyWebstore är nyligen lanserat och du är en av de första kunderna i Sverige.<br><br> Vi ber dig därför att anmäla ditt intresse genom att klicka på knappen nedan. Ett mailformumlär öppnas där du ombeds att skicka ett mail med ditt intresse.<br><br> 
+
+				  Vi kommer inom kort kontakta dig och sätta igång med din webstore.<br><br>
+
+				  <a href=""><button class="button large_button orange_button" id="signup_button">Skicka mail</button></a>
+			</div>
+
+		</section>
+
+		<section class="section_full_width">
+			<h1 style="color: #595959;">Så här enkelt är det</span></h1>
+			<div class="div_top_image" id="select_your_template">
+				<div class="div_top_image_textbox">1. Maila oss och invänta svar</div>
+			</div>
+			<div class="div_top_image" id="tell_us_about_business">
+				<div class="div_top_image_textbox">2. Berätta lite om din business</div>
+			</div>
+			<div class="div_top_image" id="customers">
+				<div class="div_top_image_textbox">3. Chilla medan vi bygger din store!</div>
+			</div>
+
+		</section>
 
 		<!--- Footer -->
 
