Adjustments to header text

--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
 		<!--- Header -->
 		
 		<div class="header" id="signup_page_header" style="margin-bottom: 50px;">
-			<div id="header_textbox">
+			<div class="header_textbox" id="signup_header_textbox">
 				<div id="header_textbox_text_signup"> 
 					Woho! Du har snart en egen webstore!
 				</div>
