Made header text id to class

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<!--- Header -->
 		
 		<div class="header" id="landing_page_header">
-			<div id="header_textbox">
+			<div class="header_textbox">
 				<div id="header_textbox_text"> 
 					Det enda du behöver
 					är något att sälja.
