--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
 		<!--- Footer -->
 
 		<footer>
-			<a href="#">Kontakta oss</a>
-			<a href="#">Mailadress</a>
-			<a href="#">Telefonnummer</a>
+			<a href="#">joachim.wernersson@anywebstore.com</a>
+			<a href="#">+46 73 622 69 70</a>
 		</footer>
 
 		<!--- Scripts -->
