Adjusted mail link

--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
 
 				  Vi kommer inom kort kontakta dig och sätta igång med din webstore.<br><br>
 
-				  <a href=""><button class="button large_button orange_button" id="signup_button">Skicka mail</button></a>
+				  <a href="mailto:joachim.wernersson@anywebstore.com?Subject=Jag%20vill%20komma%20i%20kontakt%20med%20er..."><button class="button large_button orange_button" id="signup_button">Skicka mail</button></a>
 			</div>
 
 		</section>
@@ -60,8 +60,11 @@
 		<!--- Footer -->
 
 		<footer>
-			<a href="#">joachim.wernersson@anywebstore.com</a>
-			<a href="#">+46 73 622 69 70</a>
+			<?php if (condition): ?>
+				
+			<?php else: ?>
+				
+			<?php endif ?>
 		</footer>
 
 		<!--- Scripts -->
