Inserted correct info in footer

--- a/signup.html
+++ b/signup.html
@@ -60,11 +60,8 @@
 		<!--- Footer -->
 
 		<footer>
-			<?php if (condition): ?>
-				
-			<?php else: ?>
-				
-			<?php endif ?>
+			<a href="#">joachim.wernersson@anywebstore.com</a>
+			<a href="#">+46 73 622 69 70</a>
 		</footer>
 
 		<!--- Scripts -->
