Added link to typeform in button

--- a/signup.html
+++ b/signup.html
@@ -34,11 +34,11 @@
 		<section class="section_full_width">
 			<h1 style="color: #595959;">Varmt välkommen!</span></h1>
 			<div id="header_textbox_subtext_signup">
-				 AnyWebstore är nyligen lanserat och du är en av de första kunderna i Sverige.<br><br> Vi ber dig därför att anmäla ditt intresse genom att klicka på knappen nedan. Ett mailformumlär öppnas där du ombeds att skicka ett mail med ditt intresse.<br><br> 
+				 AnyWebstore är nyligen lanserat och du är en av de första kunderna i Sverige.<br><br> Vi ber dig därför att anmäla ditt intresse genom att fylla i vårt formulär.<br><br> 
 
 				  Vi kommer inom kort kontakta dig och sätta igång med din webstore.<br><br>
 
-				  <a href="mailto:joachim.wernersson@anywebstore.com?Subject=Jag%20vill%20komma%20i%20kontakt%20med%20er..."><button class="button large_button orange_button" id="signup_button">Skicka mail</button></a>
+				  <a href="http://890622.github.io/typeform.html">Skicka mail</button></a>
 			</div>
 
 		</section>
