Changed code in button to make it work

--- a/signup.html
+++ b/signup.html
@@ -38,7 +38,7 @@
 
 				  Vi kommer inom kort kontakta dig och sätta igång med din webstore.<br><br>
 
-				  <a href="http://890622.github.io/typeform.html">Skicka mail</button></a>
+				  <a href="http://890622.github.io/typeform.html"><button class="button large_button orange_button" id="signup_button">Gå till formulär</button></a>
 			</div>
 
 		</section>
