--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,7 @@
 		<section class="section_full_width">
 			<h1 style="color: #595959;">Varmt välkommen!</span></h1>
 			<div id="header_textbox_subtext_signup">
-				 AnyWebstore är nyligen lanserat och du är en av de första kunderna i Sverige.<br><br> Vi ber dig därför att anmäla ditt intresse genom att fylla i vårt formulär.<br><br> 
+				 AnyWebstore är nyligen lanserat och du är en av de första kunderna i Sverige.<br>Vi ber dig därför att anmäla ditt intresse genom att fylla i vårt formulär.<br><br> 
 
 				  Vi kommer inom kort kontakta dig och sätta igång med din webstore.<br><br>
 
