--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
 			<div id="header_textbox_subtext_signup">
 				 AnyWebstore är nyligen lanserat och du är en av de första kunderna i Sverige.<br>Vi ber dig därför att anmäla ditt intresse genom att fylla i vårt formulär.<br><br> 
 
-				  Vi kommer inom kort kontakta dig och sätta igång med din webstore.<br><br>
+				  Vi kommer inom kort kontakta dig och sätta igång med din webstore.<br><br><br>
 
 				  <a href="http://890622.github.io/typeform.html"><button class="button large_button orange_button" id="signup_button">Gå till formulär</button></a>
 			</div>
