Added info boxes instead of three step model, translated language in them

--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
 
 		<!--- Three Step Model -->
 		<section class="section_full_width">
-			<h1 style="color: #595959;">Varmt välkommen!</span></h1>
+			<h1 style="color: #595959;">Vi kontaktar dig!</h1>
 			<div id="header_textbox_subtext_signup">
 				 AnyWebstore är nyligen lanserat och du är en av de första kunderna i Sverige.<br>Vi ber dig därför att anmäla ditt intresse genom att fylla i vårt formulär.<br><br> 
 
@@ -43,19 +43,48 @@
 
 		</section>
 
-		<section class="section_full_width">
-			<h1 style="color: #595959;">Så här enkelt är det</span></h1>
-			<div class="div_top_image" id="select_your_template">
-				<div class="div_top_image_textbox">1. Maila oss och invänta svar</div>
-			</div>
-			<div class="div_top_image" id="tell_us_about_business">
-				<div class="div_top_image_textbox">2. Berätta lite om din business</div>
-			</div>
-			<div class="div_top_image" id="customers">
-				<div class="div_top_image_textbox">3. Chilla medan vi bygger din store!</div>
-			</div>
-
-		</section>
+		<section class="section_full_width" id="boxes">
+			<h1 style="color: #595959; margin-bottom: 60px">Här är vad som ingår</h1>
+				<div id="box_website" class="box">
+					<div id="black_opacity_filter" class="opacity_filter">
+						<div class="box_header"><h2>Egen webstore</h2></div>
+						<div class="box_textbox">
+							<ul style="text-align: left">
+								<li>Anpassad för mobil</li>
+								<li>Betallösning</li>
+								<li>Hosting</li>
+								<li>Kontaktlänk för mail</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div id="box_facebook" class="box">
+					<div id="blue_opacity_filter" class="opacity_filter">
+						<div class="box_header"><h2>Facebooksida</h2></div>
+						<div class="box_textbox">
+							<ul style="text-align: left">
+								<li>Designad omslagsbild</li>
+								<li>Valfri profilbild</li>
+								<li>Verksamhetsbeskrivning</li>
+								<li>Koppling till webstore</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div id="box_facebook_ad" class="box">
+					<div id="white_opacity_filter" class="opacity_filter">
+						<div class="box_header"><h2>Facebook annons</h2></div>
+						<div class="box_textbox">
+							<ul style="text-align: left">
+								<li>Säljande annonstext</li>
+								<li>Attraktiv annonsbild</li>
+								<li>Laser fokuserad kundgrupp</li>
+								<li>Skärddarsydd budget</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
 
 		<!--- Footer -->
 
