Updated and translated thank you page

--- a/thankyou.html
+++ b/thankyou.html
@@ -30,15 +30,21 @@
 		</section>
 
 		<section class="section">
-			<h2>Thank you best customer!</h2>
+			<h2>Stort tack bäste kund!</h2>
 
-			<p>As soon as you provide us with the necessary information about your business and your site, we will start setting it up.
-			</p><br>
+			<p>Du kommer inom kort bli kontaktad av oss.<br>
+				Under tiden kan du börja skriva följande innehåll:
+			</p>
+			<ul id="thank_you_list">
+				<li>Om oss</li>
+				<li>Allmänna villkor</li>
+				<li>Returpolicy</li>
+			</ul>
 
-			<button class="button large_button orange_button" style="margin-bottom: 20px;">Download form here</button>
+			<!-- <button class="button large_button orange_button" style="margin-bottom: 20px;">Download form here</button> -->
 
 
-			<p>This form will also be emailed to you.</p>
+			<p>Vi återkommer så snart vi kan!</p>
 		</section>
 
 
