--- a/index.html
+++ b/index.html
@@ -93,6 +93,48 @@
 				</div>
 				
 			</section>
+			<section class="section_full_width" id="boxes">
+			<h1 style="color: #595959; margin-bottom: 60px">Här är vad som ingår</h1>
+				<div id="box_website" class="box">
+					<div id="black_opacity_filter" class="opacity_filter">
+						<div class="box_header"><h2>Egen webstore</h2></div>
+						<div class="box_textbox">
+							<ul style="text-align: left">
+								<li>Anpassad för mobil</li>
+								<li>Betallösning</li>
+								<li>Hosting</li>
+								<li>Kontaktlänk för mail</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div id="box_facebook" class="box">
+					<div id="blue_opacity_filter" class="opacity_filter">
+						<div class="box_header"><h2>Facebooksida</h2></div>
+						<div class="box_textbox">
+							<ul style="text-align: left">
+								<li>Designad omslagsbild</li>
+								<li>Valfri profilbild</li>
+								<li>Verksamhetsbeskrivning</li>
+								<li>Koppling till webstore</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div id="box_facebook_ad" class="box">
+					<div id="white_opacity_filter" class="opacity_filter">
+						<div class="box_header"><h2>Facebook annons</h2></div>
+						<div class="box_textbox">
+							<ul style="text-align: left">
+								<li>Säljande annonstext</li>
+								<li>Attraktiv annonsbild</li>
+								<li>Laser fokuserad kundgrupp</li>
+								<li>Skärddarsydd budget</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
 
 
 		<!--- Body END -->
@@ -108,6 +150,17 @@
 
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/scripts.js"></script>
+
+		<!--- Google Analytics -->
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-70407930-1', 'auto');
+		  ga('send', 'pageview');
+		</script>
 
 		
 </body>
