Testing again after page failure

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							Vi fixar din site<br>
 							Vi driver din trafik<br>
 							Vi hanterar din hosting<br><br>
-							Och du betalar bara $10/mån.
+							Och du betalar bara $10/mån
 						</h2>
 						<a href="http://890622.github.io/signup.html">
 						<button class="button large_button blue_button">Öppna din webstore</button>
