--- a/signup.html
+++ b/signup.html
@@ -124,7 +124,21 @@
 
 			</div>
 
-			<a href="http://890622.github.io/typeform.html"><button class="button large_button grey_button" id="signup_button">Kontakta mig</button></a>	
+			<a href="http://890622.github.io/typeform.html"><button class="button large_button grey_button" id="signup_button">Kontakta mig</button></a>
+
+		<!--- Tawk.to -->
+
+		<script type="text/javascript">
+			var $_Tawk_API={},$_Tawk_LoadStart=new Date();
+			(function(){
+				var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+				s1.async=true;
+				s1.src='https://embed.tawk.to/5655e6315d0ca158310e0c2e/default';
+				s1.charset='UTF-8';
+				s1.setAttribute('crossorigin','*');
+				s0.parentNode.insertBefore(s1,s0);
+			})();
+		</script>	
 
 		<!--- Footer -->
 
