Moved section dividers around, changed copy and icons

--- a/index.html
+++ b/index.html
@@ -24,16 +24,21 @@
 		<div class="header" id="landing_page_header">
 			<div class="header_textbox">
 				<div id="header_textbox_text"> 
-					Det enda du behöver
-					är något att sälja.
+					Webstore klar att använda.
+					Bara $10 i månaden.
 				</div>
 				<div id="header_textbox_subtext">
-				Tänk om man bara kunde klicka på en knapp så hade man en webstore, en Facebooksida och kunder som knackade på dörren.<br><br>
-				Det är precis vad AnyWebstore gör.
+				Det har aldrig någonsin varit enklare att sätta upp en webstore! Välj en design så hjälper vi dig att komma igång.
+				<br><br>
+				Vad säger du, ska vi köra igång?
 				<br><br>
 				<a href="http://890622.github.io/signup.html">
-				<button class="button large_button blue_button">Öppna din webstore</button>
-				</div></a>
+				<button class="button large_button blue_button" style="margin-bottom: 5px">Välj butiksdesign</button>
+				</a>
+				<a href="http://890622.github.io/signup.html">
+				<button class="button large_button orange_button">Chatta med oss</button></a>
+				</div>
+				</div>
 			</div>
 		</div>
 
@@ -55,7 +60,7 @@
 				</div>
 				<div class="icon_box">
 					<img class="icons" src="http://s1.postimg.org/m543wnczj/payment.png"><br>
-					<h4>Hanterad betallösning</h4>
+					<h4>Färdig betallösning</h4>
 					<p>Varje webstore levererars med fullt fungerande 'kundvagn' och betallösning.</p>	
 				</div>
 				<div class="icon_box">
@@ -65,75 +70,91 @@
 				</div>
 				<div class="icon_box">
 					<img class="icons" src="http://s1.postimg.org/h7qjbjb0f/like3.png"><br>
-					<h4>Egen Facebooksida</h4>
-					<p>Vi bygger och designar en unik Facebook sida inklusive cover photo och profilbild.</p>	
+					<h4>Hjälp att komma igång</h4>
+					<p>Vi hjälper dig att få upp shopen, dina produkter och betallösningen.</p>	
 				</div>
 				<div class="icon_box">
-					<img id="icon_geo" src="http://s1.postimg.org/ymarjt85b/geo.png"><br>
-					<h4>Laser fokuserad marknadsföring</h4>
-					<p>Vi skapar en attraktiv Facebook annons för att driva potentiella kunder till dig.</p>	
+					<img id="icon_geo" src="http://s2.postimg.org/n20sctmdl/seo10.png"><br>
+					<h4>Teknisk support</h4>
+					<p>Skulle du köra fast eller vilja ändra något kan du alltid ta hjälp av våra tekniker.</p>	
 				</div>
 
 			</section>
 
 			<section class="section_divider"
-					 id="we_do_everything_divider">
+					 id="not_sure_contact_us">
 				<div class="black_opacity2">
 					<div class="section_divider_textbox">
 						<h2>
-							Vi fixar din site<br>
-							Vi driver din trafik<br>
-							Vi hanterar din hosting<br><br>
-							Och du betalar bara $10/mån
+							Våra experter sitter redo att hjälpa dig igång.<br>
+							Välj en design så fixar vi resten.<br>
 						</h2>
 						<a href="http://890622.github.io/signup.html">
-						<button class="button large_button blue_button">Öppna din webstore</button>
-					</a>
+						<button class="button large_button blue_button">Välj butisdesign</button></a>
+						<a href="http://890622.github.io/signup.html">
+						<button class="button large_button orange_button">Chatta med oss</button></a>
 					</div>
 				</div>
 				
 			</section>
 			<section class="section_full_width" id="boxes">
-			<h1 style="color: #595959; margin-bottom: 60px">Här är vad som ingår</h1>
+			<h1 style="color: #595959; margin-bottom: 60px">Vi hjälper dig om du behöver hjälp</h1>
 				<div id="box_website" class="box">
 					<div id="black_opacity_filter" class="opacity_filter">
 						<div class="box_header"><h2>Egen webstore</h2></div>
 						<div class="box_textbox">
 							<ul style="text-align: left">
 								<li>Anpassad för mobil</li>
-								<li>Betallösning</li>
-								<li>Hosting</li>
-								<li>Kontaktlänk för mail</li>
+								<li>Integrerad betallösning</li>
+								<li>Social media integration</li>
+								<li>Fri hosting</li>
 							</ul>
 						</div>
 					</div>
 				</div>
 				<div id="box_facebook" class="box">
 					<div id="blue_opacity_filter" class="opacity_filter">
-						<div class="box_header"><h2>Facebooksida</h2></div>
+						<div class="box_header"><h2>Hjälp att komma igång</h2></div>
 						<div class="box_textbox">
 							<ul style="text-align: left">
-								<li>Designad omslagsbild</li>
-								<li>Valfri profilbild</li>
-								<li>Verksamhetsbeskrivning</li>
-								<li>Koppling till webstore</li>
+								<li>Uppladdning av produkter</li>
+								<li>Uppladdning av logotyp</li>
+								<li>Aktivering av betallösning</li>
+								<li>Kontaktlänk för mail</li>
 							</ul>
 						</div>
 					</div>
 				</div>
 				<div id="box_facebook_ad" class="box">
 					<div id="white_opacity_filter" class="opacity_filter">
-						<div class="box_header"><h2>Facebook annons</h2></div>
+						<div class="box_header"><h2>Hjälp med ändringar</h2></div>
 						<div class="box_textbox">
 							<ul style="text-align: left">
-								<li>Säljande annonstext</li>
-								<li>Attraktiv annonsbild</li>
-								<li>Laser fokuserad kundgrupp</li>
-								<li>Skärddarsydd budget</li>
+								<li>Ändra färger</li>
+								<li>Ändra typsnitt</li>
+								<li>Ändra/ta bort text</li>
+								<li>Ändra/ta bort bilder</li>
+
 							</ul>
 						</div>
 					</div>
 				</div>
+			</section>
+			<section class="section_divider"
+					 id="pricing_divider">
+				<div class="black_opacity2">
+					<div class="section_divider_textbox">
+						<h2>
+							Osäker om det här verkligen är rätt för dig?<br>
+							Kontakt oss via chat eller telefon.<br>
+						</h2>
+						<a href="http://890622.github.io/signup.html">
+				<button class="button large_button orange_button">Chatta med oss</button></a>
+				<a href="http://890622.github.io/signup.html">
+						<button class="button large_button green_button">Ring till oss</button></a>
+					</div>
+				</div>
+				
 			</section>
 
 		<!--- Tawk.to -->
@@ -156,8 +177,7 @@
 		<!--- Footer -->
 
 		<footer>
-			<a href="#">joachim.wernersson@anywebstore.com</a>
-			<a href="#">+46 73 622 69 70</a>
+			<a href="#">Kontakta oss</a>
 		</footer>
 
 		<!--- Scripts -->
