--- a/signup.html
+++ b/signup.html
@@ -57,7 +57,7 @@
 				</h3>
 					<div id="price_info_box">Engångsavgift: &emsp;&emsp;$29<br>
 					Månadsavgift: &emsp;$10</div>
-		 		<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=28ESHKD8HA5DE"><button class="button large_button green_button" id="buy_button">Kom igång paket</button></a><br>
+		 		<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZG59AAL6PSPZ8"><button class="button large_button green_button" id="buy_button">Kom igång paket</button></a><br>
 		 		
 		 	</div>
 		 	<table id="table1" class="pricing_table" border="0">
@@ -82,9 +82,8 @@
 		 		<h3>
 			 		Vill du ändra något?<br>
 				</h3>
-					<div id="price_info_box">Engångsavgift: &emsp;&emsp;$79<br>
-					Månadsavgift: &emsp;$20</div>
-		 		<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZG59AAL6PSPZ8">
+					<div id="price_info_box">Engångsavgift: &emsp;&emsp;$10</div>
+		 		<a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=L3LYKDVQG2V9Q">
 		 			<button class="button large_button orange_button" id="buy_premium_button">
 		 				Support (20 min)
 		 			</button></a><br>
