--- a/thankyou.html
+++ b/thankyou.html
@@ -50,9 +50,7 @@
 
 
 		<footer>
-			<a href="#">About</a>
-			<a href="#">Terms and conditions</a>
-			<a href="#">Contact</a>
+			<a href="#">AnyWebstore</a>
 		</footer>
 
 		<!--- Body END -->
