Added contact us boxes frames

--- a/signup.html
+++ b/signup.html
@@ -104,11 +104,10 @@
 		<!--- Contact me -->
 		
 		<section class="section_full_width">
-			<h1 id="contact_me_h1">Vill du hellre att vi kontaktar dig?</h1>
-			<div id="contact_me">
-				 AnyWebstore är nyligen lanserat och du är en av de första kunderna i Sverige. Vi förstår därför om du vill komma i kontakt med oss innan du beställer något av våra paket.<br><br> 
-
-				  Klicka på knappen nedan så kommer vi inom kort att kontakta dig och sätta igång med din webstore.<br><br><br>
+			<h1 id="contact_me_h1">Vill du att vi kontaktar dig?</h1>
+			<div class="contact_us_box"></div>
+			<div class="contact_us_box"></div>
+			<div class="contact_us_box"></div>
 
 			</div>
 
@@ -131,8 +130,7 @@
 		<!--- Footer -->
 
 		<footer>
-			<a href="#">joachim.wernersson@anywebstore.com</a>
-			<a href="#">+46 73 622 69 70</a>
+			<a href="#">AnyWebstore</a>
 		</footer>
 
 		<!--- Scripts -->
