Changed text in footer

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 		<!--- Footer -->
 
 		<footer>
-			<a href="#">Kontakta oss</a>
+			<a href="#">AnyWebstore</a>
 		</footer>
 
 		<!--- Scripts -->
